# shop-inventory

./: Cargo.toml
src/: main.rs
src/handlers/: mod.rs  order.rs
src/models/: mod.rs
