[package]
name = "inventory"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
chrono = "0.4.38"
dotenv = "0.15.0"
lapin = "2.3.4"
serde = "1.0.203"
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4", "serde"]}
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-async-std", "uuid"]}
futures-lite = "2.3.0"
